@@ -7,6 +7,7 @@ UNRELEASED CHANGES:
 * Add the TrimStrings middleware to trim all inputs
 * Call to monica:ping when updating instance
 * Fix idHasher decode function
+* Fix storage folder not being linked to public if migrations fail
 
 RELEASED VERSIONS:
 
